--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ComposeGallery">
+        android:theme="@style/Theme.Unsplash">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ComposeGallery.NoActionBar">
+            android:theme="@style/Theme.Unsplash.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
